--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">My Movies 2</string>
+    <string name="language">en-US</string>
+    <string name="app_name">My Movies API</string>
     <string name="tab_text_1">Movies</string>
     <string name="tab_text_2">TV Shows</string>
     <string name="lbl_movie_title">Title</string>
@@ -542,7 +543,4 @@
         <item>Animation, Action, Adventure | TV Series</item>
         <item>Documentary, Music | TV Mini-Series</item>
     </string-array>
-
-    <!-- TODO: Remove or change this placeholder text -->
-
 </resources>
