--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -41,5 +41,6 @@
     <string name="lbl_image_desc">Description</string>
     <string name="lbl_rating">Rating</string>
     <string name="title">Title</string>
+    <string name="koneksi">No internet connection!</string>
 
 </resources>
