change structure MVVM + Room + API

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="language">en-US</string>
-    <string name="app_name">My Movies 2</string>
+    <string name="app_name">My Movies API</string>
     <string name="tab_text_1">Movies</string>
-    <string name="tab_text_2">TV Shows</string>
+    <string name="tab_text_2">Movies Favorite</string>
     <string name="lbl_movie_title">Title</string>
     <string name="lbl_movie_year">Year</string>
     <string name="txt_movie_rate">Rate </string>
