--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
     <string name="language">en-US</string>
     <string name="app_name">My Movies API</string>
+
     <string name="tab_text_1">Movies</string>
     <string name="tab_text_2">Movies Favorite</string>
+
     <string name="lbl_movie_title">Title</string>
     <string name="lbl_movie_year">Year</string>
     <string name="txt_movie_rate">Rate </string>
@@ -10,13 +12,6 @@
     <string name="lbl_movie_stars">Stars</string>
     <string name="lbl_movie_votes">Votes</string>
     <string name="lbl_movie_gross">Gross</string>
-
-    <string name="lbl_tv_title">Title</string>
-    <string name="lbl_tv_year">Year</string>
-    <string name="lbl_tv_genre">Action, Thriller</string>
-    <string name="lbl_tv_overview">Overview</string>
-    <string name="lbl_tv_stars">Stars</string>
-    <string name="lbl_tv_votes">Votes</string>
 
     <string name="txt_movie_title">Title</string>
     <string name="txt_movie_synopsis">As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</string>
@@ -40,9 +35,13 @@
     <string name="lbl_header_tv_detail">TV Show Detail </string>
     <string name="lbl_image_desc">Description</string>
     <string name="lbl_rating">Rating</string>
-    <string name="title">Title</string>
-    <string name="koneksi">No internet connection!</string>
 
-    <string name="favorite" translatable="false">Favorite</string>
+    <string name="lbl_title">Title</string>
+    <string name="lbl_connection_info">No internet connection!</string>
+    <string name="lbl_favorite">Favorite</string>
+    <string name="lbl_delete_confirm">Apakah anda yakin ingin menghapus data ini?</string>
+    <string name="lbl_delete_desc">Data yang akan dihapus tidak dapat dikembalikan!</string>
+    <string name="lbl_confirm_yes">Yes</string>
+    <string name="lbl_confirm_no">No</string>
 
 </resources>
