--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -11,13 +11,6 @@
     <string name="lbl_movie_votes">Votes</string>
     <string name="lbl_movie_gross">Gross</string>
 
-    <string name="lbl_tv_title">Title</string>
-    <string name="lbl_tv_year">Year</string>
-    <string name="lbl_tv_genre">Action, Thriller</string>
-    <string name="lbl_tv_overview">Overview</string>
-    <string name="lbl_tv_stars">Stars</string>
-    <string name="lbl_tv_votes">Votes</string>
-
     <string name="txt_movie_title">Title</string>
     <string name="txt_movie_synopsis">As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</string>
     <string name="txt_movie_stars">Robert Downey Jr.</string>
@@ -40,7 +33,12 @@
     <string name="lbl_header_tv_detail">TV Show Detail </string>
     <string name="lbl_image_desc">Description</string>
     <string name="lbl_rating">Rating</string>
-    <string name="title">Title</string>
-    <string name="koneksi">No internet connection!</string>
+    <string name="lbl_title">Title</string>
+    <string name="lbl_connection_info">No internet connection!</string>
+    <string name="lbl_favorite">Favorite</string>
+    <string name="lbl_delete_confirm">Are you sure to delete this data?</string>
+    <string name="lbl_delete_desc">Deleted data could not be recovered!</string>
+    <string name="lbl_confirm_yes">Yes</string>
+    <string name="lbl_confirm_no">No</string>
 
 </resources>
